[metadata]
name = ordway
description-file = README.md

[coverage:run]
source = ordway/
branch = True
parallel = True

[coverage:report]
skip_empty = True
exclude_lines = 
    pragma: no cover
    if TYPE_CHECKING:

[mypy]
strict_equality = True
disallow_untyped_decorators = False
warn_unreachable = True
follow_imports = 'skip'
ignore_missing_imports = True
